syntax = "proto3";

option java_package = "com.github.jonathansavas.parabond.ParaDispatcher";
option java_outer_classname = "ParaDispatcherProto";

service ParaDispatcher {
    rpc dispatch(GrpcJobSize) returns (GrpcJobInfo) {}
}

message GrpcJobSize {
    int32 n = 1;
}

message GrpcJobInfo {
    int64 t1 = 1;
    int64 tN = 2;
    int32 misses = 3;
}